refactor: isolate asset scripting engine