@@ -8,6 +8,9 @@ import nexa.plugin.asset.resource.AssetManagerResourcePlugin;
 
 import java.util.Map;
 
+/**
+ * Host bridge exposed only to the Asset Manager scripting environment.
+ */
 public final class AssetManagerScriptExtension implements NexaRuntimeExtension {
 
     @Override
@@ -27,45 +30,51 @@ public final class AssetManagerScriptExtension implements NexaRuntimeExtension {
                 throw new NexaScriptException("Asset Manager plugin belum aktif atau tidak dapat ditemukan.", line, column);
             }
 
+            AssetScriptingEngine engine = manager.getScriptingEngine();
+
             return switch (name) {
                 case "read" -> (NexaCallable) (runtime, arguments, callLine, callColumn) -> {
                     if (arguments.isEmpty()) {
                         throw new NexaScriptException("Method read() memerlukan 1 argumen path.", callLine, callColumn);
                     }
-                    String path = String.valueOf(arguments.getFirst());
-                    String contextPath = ScriptContextTracker.getContextPath();
-                    if (contextPath != null) {
-                        path = AssetManagerResourcePlugin.resolvePath(contextPath, path);
+
+                    String path = resolvePath(engine, String.valueOf(arguments.getFirst()));
+                    AssetScriptContext context = engine.currentContext();
+                    if (context != null) {
+                        context.recordRead(path);
                     }
-                    ScriptContextTracker.recordRead(path);
                     return manager.read(path);
                 };
                 case "readVTQ" -> (NexaCallable) (runtime, arguments, callLine, callColumn) -> {
                     if (arguments.isEmpty()) {
                         throw new NexaScriptException("Method readVTQ() memerlukan 1 argumen path.", callLine, callColumn);
                     }
-                    String path = String.valueOf(arguments.getFirst());
-                    String contextPath = ScriptContextTracker.getContextPath();
-                    if (contextPath != null) {
-                        path = AssetManagerResourcePlugin.resolvePath(contextPath, path);
+
+                    String path = resolvePath(engine, String.valueOf(arguments.getFirst()));
+                    AssetScriptContext context = engine.currentContext();
+                    if (context != null) {
+                        context.recordRead(path);
                     }
-                    ScriptContextTracker.recordRead(path);
                     return manager.readVTQ(path);
                 };
                 case "write" -> (NexaCallable) (runtime, arguments, callLine, callColumn) -> {
                     if (arguments.size() < 2) {
                         throw new NexaScriptException("Method write() memerlukan 2 argumen: path dan value.", callLine, callColumn);
                     }
-                    String path = String.valueOf(arguments.get(0));
-                    Object value = arguments.get(1);
-                    String contextPath = ScriptContextTracker.getContextPath();
-                    if (contextPath != null) {
-                        path = AssetManagerResourcePlugin.resolvePath(contextPath, path);
-                    }
-                    return manager.write(path, value);
+
+                    String path = resolvePath(engine, String.valueOf(arguments.getFirst()));
+                    return manager.write(path, arguments.get(1));
                 };
                 default -> throw new NexaScriptException("Member assetManager tidak dikenal: " + name, line, column);
             };
+        }
+
+        private String resolvePath(AssetScriptingEngine engine, String path) {
+            AssetScriptContext context = engine.currentContext();
+            if (context != null) {
+                return AssetManagerResourcePlugin.resolvePath(context.attributePath(), path);
+            }
+            return AssetManagerResourcePlugin.normalizePath(path);
         }
     }
 }
